--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.2.1",
     "lodash.debounce": "^4.0.8",
     "nice-react-ticker": "^2.1.0",
     "react": "^18.2.0",
